memelist: now with dark theme

--- a/memelist/index.html
+++ b/memelist/index.html
@@ -3,10 +3,13 @@
 		<title>Meme List</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="theme-color" content="#000000" />
 		<style>
 		<!--
 			* {
 				font-family: sans-serif;
+				background-color: #000;
+				color: #fff;
 			}
 
 			.memetable {
@@ -36,7 +39,7 @@
 		<script src="lz-string.min.js"></script>
 		<h1>real things that were said in <a href="https://twitch.tv/shift">SHiFT</a>'s chat</h1>
 		<p>courtesy of <a href="https://twitch.tv/theessenceofdarkness">Dark</a></p>
-		<p>Due to caching, the list only updates on your local machine every hour.</p>
+		<p>now with new dark theme pog</p>
 		<table border="1" class="memetable" id="memetable">
 			<tr>
 				<td>ID</td>
